@@ -4,6 +4,8 @@ import com.samsa.core.InOutNode;
 import com.samsa.core.Message;
 import lombok.extern.slf4j.Slf4j;
 import java.io.IOException;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.HashMap;
@@ -12,40 +14,40 @@ import java.util.Map;
 @Slf4j
 public class ReadFileNode extends InOutNode {
     private final String filePath;
-    private String encoding = "utf-8";
+    private final Charset encoding;
 
     public ReadFileNode(String id, String filePath) {
-        super(id);
-        this.filePath = filePath;
+        this(id, filePath, StandardCharsets.UTF_8);
     }
 
-    public ReadFileNode(String id, String filePath, String encoding) {
-        this(id, filePath);
+    public ReadFileNode(String id, String filePath, String encodingName) {
+        this(id, filePath, Charset.forName(encodingName));
+    }
+
+    public ReadFileNode(String id, String filePath, Charset encoding) {
+        super(id);
+        this.filePath = filePath;
         this.encoding = encoding;
     }
 
     @Override
     public void onMessage(Message message) {
         try {
-            // Read the entire file content
-            String fileContent = new String(Files.readAllBytes(Paths.get(filePath)));
+            String fileContent = Files.readString(Paths.get(filePath), encoding);
 
-            // Create metadata to include file information
             Map<String, Object> metadata = new HashMap<>();
             metadata.put("source_file", filePath);
             metadata.put("file_size", Files.size(Paths.get(filePath)));
+            metadata.put("file_encoding", encoding.name());
 
-            // Create a new message with file content
             Message outputMessage = new Message(fileContent, metadata);
 
-            // Emit the message to output pipes
             emit(outputMessage);
 
-            log.info("Successfully read file: {}", filePath);
+            log.info("Successfully read file: {} with encoding: {}", filePath, encoding.name());
         } catch (IOException e) {
-            // Handle any file reading errors
             handleError(e);
-            log.error("Error reading file: {}", filePath, e);
+            log.error("Error reading file: {} with encoding: {}", filePath, encoding.name(), e);
         }
     }
 }
